# s3upload

./: README.md  config.example.yaml  pyproject.toml
s3upload/: __main__.py  application.py  config.py  container.py  exceptions.py  interactors.py  main.py  protocols.py  task.py  utils.py
s3upload/interactors/downloader/: aiohttp.py  base.py
s3upload/interactors/uploader/: base.py  s3.py
s3upload/task/: base.py  impl.py
s3upload/utils/: aiohttp.py  common.py  logger.py
tests/: test_task_executor.py
tests/mocks/: downloader.py  uploader.py
