[tool.poetry]
name = "s3upload"
version = "0.1.0"
description = "S3 Uploader"
authors = ["kizzlota <kizzlota@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = {version = "^0.9.0", extras = ["all"]}
aiohttp = "^3.8.6"
aiodns = "^3.1.1"
aioboto3 = "^12.0.0"
dependency-injector = "^4.41.0"
structlog = "^23.2.0"


[tool.poetry.group.testing.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"


[tool.poetry.group.lint.dependencies]
isort = "^5.12.0"
black = "^23.10.1"
flake8 = "^6.1.0"

[tool.poetry.scripts]
s3upload = "s3upload.main:app"

[tool.isort]
profile = "black"
line_length = 79

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
